--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,6 +63,10 @@ html {
   @apply w-14 h-14 flex justify-center items-center cursor-pointer select-none;
 }
 
+.select-container{
+  @apply py-2 px-3 text-sm bg-gray-300 text-gray-700 cursor-pointer rounded-md;
+}
+
 .glassmorphism {
   background: rgba(255, 255, 255, 0.25);
   box-shadow: 0 2px 30px 0 rgba(31, 38, 135, 0.07);
